# djangoFCM

./: .gitignore  MANIFEST.in  README.md  setup.cfg
djangoFCM/: __init__.py  admin.py  apps.py  tasks.py  urls.py
djangoFCM/admin/: __init__.py
djangoFCM/admin/models/: __init__.py  application.py  notification.py  parameter.py  push_token.py
djangoFCM/fields/: __init__.py
djangoFCM/forms/: __init__.py  data_composer.py
djangoFCM/locale/ru_RU/LC_MESSAGES/: django.po
djangoFCM/migrations/: 0001_initial.py  0002_auto_20220111_1251.py  0003_application_messaging_service.py  0004_notification_author.py
djangoFCM/models/: __init__.py  notification.py  parameter.py  push_token.py
djangoFCM/models/application/: __init__.py  model.py
djangoFCM/models/notification/: __init__.py  model.py
djangoFCM/models/push_token/: __init__.py  manager.py  model.py
djangoFCM/src/: __init__.py  calendar.py  fcm.py  hms.py
djangoFCM/static/djangoFCM/admin/css/: calendar.css
djangoFCM/static/djangoFCM/generic/css/: query-composer.css
djangoFCM/static/djangoFCM/generic/js/: data-composer.js  query-composer.js
djangoFCM/templates/djangoFCM/admin/: calendar.html  notification_changelist.html  recipients_composer.html
djangoFCM/templates/djangoFCM/generic/: data-composer.html  query-composer.html
djangoFCM/views/admin/: calendar.py  fetcher.py  metadata.py
docs/gpg_keys/: djangoFCM
sample_project/: manage.py
sample_project/sample_project/: celeryapp.py  settings.py  urls.py
