[metadata]
name                            =   djangoFCM
version                         =   0.2.0
description                     =   Django app which stores, manages FCM push tokens and interacts with them.
long_description                =   file: README.md
long_description_content_type   =   text/markdown
url                             =   https://github.com/omelched/djangoFCM
author                          =   Denis Omelchenko
author_email                    =   omelched@gmail.com
classifiers                     =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
    Natural Language :: English
    Natural Language :: Russian
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Database
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP
    Topic :: Utilities
project_urls                    =
    Bug Tracker                 =   https://github.com/omelched/djangoFCM/issues
    Changelog                   =   https://github.com/omelched/djangoFCM/releases

[options]
packages                        =   find:
install_requires                =
    django>=3.2.8
    django-celery-beat>=2.2.1
    pyfcm>=1.5.4
    django-picklefield>=3.0.1
python_requires                 =   >=3.8
